openspeedtest/openspeedtest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: openspeedtest
  name: openspeedtest
  namespace: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openspeedtest
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: openspeedtest
    spec:
      containers:
      - image: openspeedtest/latest
        name: latest
