openspeedtest/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    cert-manager.io/cluster-issuer: ca-issuer
  name: openspeedtest
  namespace: openspeedtest
spec:
  ingressClassName: traefik
  rules:
  - host: openspeedtest.home
    http:
      paths:
      - backend:
          service:
            name: openspeedtest
            port:
              number: 3000
        path: /
        pathType: Prefix
#  tls:
#  - hosts:
#    - openspeedtest.home
#    secretName: openspeedtest-cert
